Avoid deprecated Java API.